--- a/_posts/2021-05-19-AG03.md
+++ b/_posts/2021-05-19-AG03.md
@@ -3,7 +3,7 @@ layout: post
 title: 알고리즘03- DP
 categories: [Today i learn]
 tags: [Algorithm, TIL, C]
-description: 다이나믹 프로그래밍 예제 하나. 나머지는 복기하기에는 애매해서 TIL에 쓰지 않음.
+description: 다이나믹 프로그래밍 관련 알고리즘들.
 ---
 
 # 1. 이항 계수
@@ -44,6 +44,118 @@ int bin(int n, int k)
                 B[i][j] = B[i-1][j-1] + B[i-1][j];
         }
     return B[n][k];
+}
+```
+
+
+
+# 2. Chained Matrix Multiplication
+
+![image-20210519194507976](https://raw.githubusercontent.com/chunyunseo/ImageRepo/image/img/image-20210519194507976.png)
+
+ 위와 같은 행렬을 곱하면 nml번의 곱셈과 덧셈이 발생한다. 행렬 A1A2A3A4A5A6...을 곱할 때, 재귀적으로 최적해를 구할 수 있고, 이는 DP를 적용하기에 적합하다.
+
+![image-20210519200239319](https://raw.githubusercontent.com/chunyunseo/ImageRepo/image/img/image-20210519200239319.png)
+
+d0~d6이 위와 같을 때, 점화식은 아래처럼 나온다.
+
+![image-20210519200307064](https://raw.githubusercontent.com/chunyunseo/ImageRepo/image/img/image-20210519200307064.png)
+
+```c
+int min_mult(int n , const int d[], int P[][])
+{
+    int i, j, k, diagonal, min_k;
+    int M[n+1][n+1];
+    /*
+    편의상 pseudo code에 가깝게 적었는데, 실제 코드에서는
+    int **M = (int**)calloc(n+1 ,sizeof(int*);
+    for(int i=0; i<n+1; i++)
+    	M[i] = (int*)calloc(n+1, sizeof(int));
+    와 같이 메모리가 할당 됨.
+    */
+    
+    for(i = 1; i<=n; i++)
+        M[i][i] = 0;
+    for(diagonal = 1; diagonal <= n-1; diagonal++)
+        for(i=1; i<= n-diagonal; i++)
+        {
+            j = i + diagonal;
+            M[i][j] = minimum(M[i][k] + M[k+1][j] + d[i-1]*d[k]*d[j], i, k, j-1, &min_k); //점화식 함수, minimum값을 만드는 k값을 돌려줌. 
+            P[i][j] = min_k;
+        }
+    return M[1][n];
+} //시간복잡도 n^3
+```
+
+
+
+- 곱하는 순서를 출력하는 알고리즘
+
+![image-20210519203752163](https://raw.githubusercontent.com/chunyunseo/ImageRepo/image/img/image-20210519203752163.png)
+
+```c
+void order(int i, int j)
+{
+    if(i==j)
+        printf("A%d", i);
+    else
+    {
+        k = P[i][j];
+        printf("(");
+        order(i, k);
+        order(k+1, j);
+        printf(")");
+    }
+}
+//곱하는 순서를 출력하는 알고리즘. order(1, n)에서 시작.
+```
+
+
+
+# 3. Optimal binary Searh Tree
+
+- 각 노드의 평균 비교횟수가 다른 BST.
+
+![image-20210519214843922](https://raw.githubusercontent.com/chunyunseo/ImageRepo/image/img/image-20210519214843922.png)
+
+- 점화식
+
+![image-20210519222100586](https://raw.githubusercontent.com/chunyunseo/ImageRepo/image/img/image-20210519222100586.png)
+
+![image-20210519220324457](https://raw.githubusercontent.com/chunyunseo/ImageRepo/image/img/image-20210519220324457.png)
+
+경로에 있는 모든 노드를 전부 더하는데, 이는 비교 과정에서 경로의 모든 노드가 한 번씩 비교되기 때문이다.(모든 노드가 비교횟수가 하나씩 증가함.)
+
+- 코드
+  - 시간복잡도는 n^3
+
+```c
+void optimal_search_tree(int n, const float p[], float& minavg, int R[][])
+{
+    int i, j, k, diagonal;
+    float A[n+2][n+1];
+    for(i=1; i<=n; i++)
+    {
+        A[i][i-1] = 0; //empty tree
+        A[i][i] = p[i]; //key[i]~ key[i]로 이루어진 BST의 평균 비교횟수.
+        R[i][i] = i;
+        R[i][i-1] = 0;
+    }
+    A[n+1][n] = 0;
+    R[n+1][n] = 0;
+    for(diagonal = ; digonal <= n-1; diagonal++)
+    {
+        for(i=1; i<=n-diagonal; i++)
+        {
+            j = i + diagonal;
+            A[i][j] = minimum(A, i, k -1, A, k+1, j) + summation(p, i, j);
+            //minimum-> 점화식함수
+            //sumation -> i부터 j까지의 p_n을 더하는 함수.
+            R[i][j] = get_minimum_value_of_k();
+            //위 minimum에서 걸린 k의 값.         
+        }
+        minavg = A[1][n];
+    }
 }
 ```
 
