--- a/_posts/2021-05-25-OS09.md
+++ b/_posts/2021-05-25-OS09.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 운영체제9 - 스케쥴링
+title: 운영체제9 - 스케쥴링2
 categories: [Today i learn]
 tags: [OS, TIL, C]
 description: 인터럽트, 부트스트랩 등에 대해서
